fixing all photos

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <!-- TOP ROW: Image on left, text on right -->
     <div class="hobbies-row child">
       <div class="hobby-image-left">
-        <img src="../img/dance.jpg" alt="Hobby Image Left" />
+        <img src="img/dance.jpg" alt="Hobby Image Left" />
       </div>
       <div class="hobbies-text-right">
         <p>
@@ -129,7 +129,7 @@
     <!-- BOTTOM ROW: Text on left, image on right -->
     <div class="hobbies-row child">
 	<div class="hobby-image-right">
-        <img src="../img/piano.jpg" alt="Hobby Image Right" />
+        <img src="img/piano.jpg" alt="Hobby Image Right" />
       </div>
       <div class="hobbies-text-left">
         <p>
