--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
       <div class="summary-content child">
         <div class="summary-text">
-          <h2 class="child">Summary</h2>
+          <h2 class="child">About me!</h2>
           <p class="child">
-            Hi! I’m Jason. I’m a Junior Business Analyst who thrives on turning messy data into clear, actionable insights, and making sure those insights actually help people. After graduating from Tallahassee State College (and now studying at Florida State University), I dove into QA/UAT testing for Five Points Group, where I learned the importance of both technical precision and empathetic communication with clients. My favorite part of business analysis is bridging the gap between “what the system does” and “what the user needs.” I love asking questions, mapping out workflows, and making complex requirements feel straightforward. I believe clear communication, curiosity, and a dash of creativity are what make projects—and teams—truly succeed.
+            Hi! I’m Jason. I’m a Junior Business Analyst who thrives on turning messy data into clear, actionable insights, and making sure those insights actually help people. After graduating from Tallahassee State College (and now studying at Florida State University), I dove into QA/UAT testing for Five Points Group, where I learned the importance of both technical precision and empathetic communication with clients. My favorite part of business analysis is bridging the gap between “what the system does” and “what the user needs.” I love asking questions, mapping out workflows, and making complex requirements feel straightforward. I believe clear communication, curiosity, and a dash of creativity are what make projects - and teams - truly succeed.
           </p>
         </div>
         <div class="summary-photo child">
