--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="goal-category child">
           <h3 class="child">Career Objectives</h3>
           <p class="child">
-		  Over the next 12–18 months, I’ll transition from supporting QA/UAT to leading full requirements cycles—writing 
+		  Over the next 12–18 months, I’ll transition from supporting QA/UAT to leading full requirements cycles - writing 
 		  user stories, overseeing UAT, earning PMI-PBA, and mastering Power BI dashboards. In the long run, I aim to become a Senior Business 
 		  Analyst or Product Owner, mentor junior team members, drive process automation, and serve as the go-to liaison between IT and 
 		  the business, championing data-driven change.</p>
