Organizing site files, changing site title

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jason Westmark – Interactive Resume</title>
+  <title>Jason Westmark</title>
   <link rel="stylesheet" href="index.css" />
 </head>
 <body>
 <div class="content-wrapper">
 <div class="download-buttons">
-  <a href="jason-westmark-resume.pdf" class="download-button">PDF Resume</a>
-  <a href="jason-westmark-resume.docx" class="download-button">Word Resume</a>
+  <a href="resumes/jason-westmark-resume.pdf" class="download-button">PDF Resume</a>
+  <a href="resumes/jason-westmark-resume.docx" class="download-button">Word Resume</a>
 </div>
   <!-- Summary Section -->
   <section id="summary" class="section fade-in-section">
