adding images, colors, icons, graphics

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section id="summary" class="section fade-in-section">
         <div class="inner">
           <header class="site-header">
-            <h2 class="site-title">Jason Westmark</h2>
+            <h2 class="site-title child">Jason Westmark</h2>
           </header>
 
           <div class="summary-content child">
@@ -72,7 +72,7 @@
         <div class="inner">
           <div class="goals-content">
             <!-- Career Objectives -->
-            <div class="goal-category child">
+            <div class="goal-category child career">
               <h2 class="child">Career Objectives</h2>
               <p class="child">
                 Over the next 12–18 months, I’ll transition from supporting
@@ -86,7 +86,7 @@
             </div>
 
             <!-- Personal Objectives -->
-            <div class="goal-category child">
+            <div class="goal-category child personal">
               <h2 class="child">Personal Objectives</h2>
               <p class="child">
                 Maintain daily piano practice and complete at least two
@@ -166,29 +166,59 @@
       <!-- Skills Section -->
       <section id="skills" class="section fade-in-section">
         <div class="inner">
-          <h2 class="child">Skills</h2>
+          <h2>Skills</h2>
           <div class="skills-content">
             <!-- Coding Languages -->
-            <div class="skill-category child">
+            <div class="skill-category child programming">
               <h3 class="child">Programming:</h3>
               <ul>
-                <li class="child">C++</li>
-                <li class="child">Python</li>
-                <li class="child">Java</li>
-                <li class="child">JavaScript</li>
-				<li class="child">Bash/Shell Scripting</li>
-				<li class="child">Android Mobile App Development</li>
-              </ul>
+				 <li class="child">
+					<img src="icons/icon-cpp.png" alt="C++" aria-hidden="true" class="child skill-icon">
+					C++
+				 </li>
+				 <li class="child">
+					<img src="icons/icon-python.png" alt="Python" aria-hidden="true" class="child skill-icon">
+					Python
+				 </li>
+				 <li class="child">
+					<img src="icons/icon-java.png" alt="Java" aria-hidden="true" class="child skill-icon">
+					Java
+				 </li>
+				 <li class="child">
+					<img src="icons/icon-js.png" alt="JavaScript" aria-hidden="true" class="child skill-icon">
+					JavaScript
+				 </li>
+				 <li class="child">
+					<img src="icons/icon-bash.png" alt="Bash" aria-hidden="true" class="child skill-icon">
+					Bash
+				 </li>
+			  </ul>
             </div>
 
             <!-- Applications -->
             <div class="skill-category child">
               <h3 class="child">Applications:</h3>
               <ul>
-                <li class="child">Azure DevOps</li>
-                <li class="child">Jira</li>
-                <li class="child">Office Suite</li>
-				<li class="child">Git</li>
+                <li class="child">
+				<img src="icons/icon-devops.png" alt="Azure Devops" aria-hidden="true" class="child skill-icon">
+				Azure DevOps
+				</li>
+                <li class="child">
+				<img src="icons/icon-jira.png" alt="Jira" aria-hidden="true" class="child skill-icon">
+				Jira
+				</li>
+                <li class="child">
+				<img src="icons/icon-officesuite.png" alt="Office Suite" aria-hidden="true" class="child skill-icon">
+				Office Suite
+				</li>
+				<li class="child">
+				<img src="icons/icon-git.png" alt="Git" aria-hidden="true" class="child skill-icon">
+				Git
+				</li>
+				<li class="child">
+				<img src="icons/icon-android.png" alt="Android Studio" aria-hidden="true" class="child skill-icon">
+				Android Studio
+				</li>
               </ul>
             </div>
           </div>
