Adding career portfolio

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       <!-- Download Buttons -->
       <div class="download-buttons">
         <a
-          href="resumes/jason-westmark-resume.pdf"
+          href="files/jason-westmark-resume.pdf"
           class="download-button"
         >
           PDF Resume
         </a>
         <a
-          href="resumes/jason-westmark-resume.docx"
+          href="files/jason-westmark-resume.docx"
           class="download-button"
         >
           Word Resume
@@ -296,6 +296,28 @@
           </div>
         </div>
       </section>
+	  
+	  <!-- Projects Section -->
+	  <section id="projects" class="section fade-in-section">
+		<div class="inner">
+			<h2 class="fade-in-section">Career Portfolio</h2>
+			
+			<div class="project project1 fade-in-section">
+				<a href="project1.html">
+				<img src="img/steptrack.png"/>
+				<span>StepTrack</span>
+				</a>
+			</div>
+			
+			<div class="project project2 fade-in-section">
+				<a href="project2.html">
+				<img src="icons/pdf.png"/>
+				<span>BitBucket Setup Guide</span>
+				</a>
+			</div>
+			
+		</div>
+	  </section>
 
       <!-- Hobbies Section -->
       <section id="hobbies" class="section fade-in-section">
@@ -411,10 +433,11 @@
           <!-- TICKS for each section -->
           <div class="dial-tick" style="--angle: 330deg;"></div>
           <div class="dial-tick" style="--angle: 30deg;"></div>
-          <div class="dial-tick" style="--angle: 90deg;"></div>
-          <div class="dial-tick" style="--angle: 150deg;"></div>
-          <div class="dial-tick" style="--angle: 210deg;"></div>
-		  <div class="dial-tick" style="--angle: 270deg;"></div>
+          <div class="dial-tick" style="--angle: 80deg;"></div>
+          <div class="dial-tick" style="--angle: 125deg;"></div>
+          <div class="dial-tick" style="--angle: 180deg;"></div>
+		  <div class="dial-tick" style="--angle: 235deg;"></div>
+		  <div class="dial-tick" style="--angle: 280deg;"></div>
 
           <!-- LABELS linking to each section -->
           <a
@@ -435,28 +458,35 @@
             href="#experience"
             class="dial-label"
             data-section="experience"
-            style="--angle:  90deg;"
+            style="--angle:  80deg;"
             >Experience</a
           >
           <a
             href="#skills"
             class="dial-label"
             data-section="skills"
-            style="--angle:  150deg;"
+            style="--angle:  125deg;"
             >Skills</a
           >
+		  <a
+		  href="#projects"
+		  class="dial-label"
+		  data-section="projects"
+		  style="--angle: 180deg;"
+		  >Projects</a
+		  >
           <a
             href="#hobbies"
             class="dial-label"
             data-section="hobbies"
-            style="--angle: 210deg;"
+            style="--angle: 235deg;"
             >Hobbies</a
           >
           <a
             href="#contact"
             class="dial-label"
             data-section="contact"
-            style="--angle: 270deg;"
+            style="--angle: 280deg;"
             >Contact</a
           >
         </div>
